<resources>
    <string name="app_name">Traffic</string>
    <string name="app_title">智能交通</string>
    <string name="action_settings">设置</string>
    <string name="hint_name">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_mspwd">请再次输入密码</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="setting">网络设置</string>
    <string name="auto_login">自动登陆</string>
    <string name="rememberpwd">记住密码</string>
    <string name="register">注册</string>

    <string name="error_ip">服务器地址不能为空！</string>

    <string name="res_left_module1">模块1</string>
    <string name="res_left_module2">模块2</string>
    <string name="res_left_module3">模块3</string>
    <string name="res_left_module4">模块4</string>
    <string name="res_left_module5">模块5</string>
    <string name="res_left_module6">模块6</string>
    <string name="res_left_module7">检查更新</string>
    <string name="res_left_module8">意见反馈</string>
    <string name="res_left_module9">关于我们</string>
    <string name="res_left_exit">用户退出</string>
    <string name="info_result">通讯数据返回结果！</string>
    <string name="info_app">欢迎使用智能交通APP！
"本系统的主要功能包括我的账户、账单管理、红绿灯管理、违章视频、公交查询、实时环境和车位查询等。</string>

    <string name="title_home">主页</string>
    <string name="title_frag_1">frag_1</string>
    <string name="title_frag_2">frag_2</string>
    <string name="title_frag_3">frag_3</string>
    <string name="title_frag_4">frag_4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_frag_music">主页</string>
    <string name="title_frag_video">实时环境</string>
    <string name="title_frag_album">创意设计</string>

    <string name="jianyi_title">建议标题</string>
    <string name="jianyi_content">建议内容</string>
    <string name="jianyi_user_phone">预留手机号</string>
    <string name="jianyi_tijiao">提  交</string>

    <string-array name="sp_type">
        <item>次数</item>
        <item>时间</item>
    </string-array>

    <string name="user_name">用户名：%1s</string>
    <string name="you_name">姓名：%1s</string>
    <string name="user_date">注册时间：%1s</string>
    <string name="user_id_card">身份证：%1s</string>
    <string name="user_phone">手机号：%1s</string>
    <string name="user_sex">性别：%1s</string>
    <string name="user_balance">余额：%1s</string>
    余额
    %ns--->n表示目前是第几个参数 （比如%1s中的1代表第一个参数）,s代表字符串
    %nd--->n表示目前是第几个参数 （比如%1d中的1代表第一个参数）,d代表整数
    %nf--->n表示目前是第几个参数 （比如%1f中的1代表第一个参数）,f代表浮点数


    <!--红绿灯管理排序方式-->
    <string-array name="frag2_spinner">
        <item>路口升序</item>
        <item>路口降序</item>
        <item>红灯升序</item>
        <item>红灯降序</item>
        <item>黄灯升序</item>
        <item>黄灯降序</item>
        <item>绿灯升序</item>
        <item>绿灯降序</item>
    </string-array>

    <string-array name="frag37_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
